ScrumBard-it account authentication

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,22 +7,24 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        default:
+        main:
             anonymous: ~
             guard:
                 authenticators:
-                    - jira_token_authenticator
-                    - github_token_authenticator
-                    - visitor_token_authenticator
-                entry_point: jira_token_authenticator
+                   # - jira_token_authenticator
+                   # - github_token_authenticator
+                    - sbi_authenticator
+                    - visitor_authenticator
+                entry_point: sbi_authenticator
             logout:
                 path: /logout
                 target: /
             remember_me:
                 secret:   '%secret%'
-                lifetime: 604800 # 1 week in seconds
-                path:     /
             
     providers:
         webservice:
             id: webservice_user_provider
+    
+    encoders:
+        ScrumBoardItBundle\Entity\User: bcrypt
