--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 		"sensio/framework-extra-bundle" : "^3.0.2",
 		"incenteev/composer-parameter-handler" : "^2.0",
 		"symfony/assetic-bundle" : "^2.8",
-		"guzzlehttp/guzzle": "^6.2"
+		"guzzlehttp/guzzle": "^6.2",
+        "friendsofsymfony/oauth-server-bundle": "^1.5.2"
 	},
 	"require-dev" : {
 		"sensio/generator-bundle" : "^3.0",
